--- a/Templates/accueil.html
+++ b/Templates/accueil.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Page d'accueil</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+JQLZCltNCNXaFkXb8+8E2bO2PmD9f" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename='accueil.css') }}">
-</head>
+{% extends 'base.html' %}
+
+{% block content %}
+
 <body>
     <div class="container">
         <h1>Dernières publications</h1>
         <form class="mt-3" action="/search">
             <div class="form-group">
                 <input type="text" class="form-control" name="query" placeholder="Rechercher un article">
+                <br>
                 <button type="submit" class="btn btn-primary">Rechercher</button>
             </div>
         </form>
@@ -26,8 +24,6 @@
             {% endfor %}
         </ul>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper-base.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+JQLZCltNCNXaFkXb8+8E2bO2PmD9f" crossorigin="anonymous"></script>
 </body>
 </html>
+{% endblock %}
