--- a/Templates/creation.html
+++ b/Templates/creation.html
@@ -11,6 +11,21 @@
         </div>
 
         <div class="form-group">
+            <label for="identifiant">identifiant :</label>
+            <input type="text" class="form-control" id="identifiant" name="identifiant" required>
+        </div>
+
+        <div class="form-group">
+            <label for="auteur">auteur :</label>
+            <input type="text" class="form-control" id="auteur" name="auteur" required>
+        </div>
+
+        <div class="form-group">
+            <label for="date_publication">date_publication :</label>
+            <input type="date" class="form-control" id="date_publication" name="date_publication" required>
+        </div>
+
+        <div class="form-group">
             <label for="paragraphe">Paragraphe :</label>
             <textarea class="form-control" id="paragraphe" name="paragraphe" required></textarea>
         </div>
