--- a/Templates/modification.html
+++ b/Templates/modification.html
@@ -1,22 +1,22 @@
 {% extends 'adminbase.html' %}
 
 {% block content %}
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Modifier un article</title>
-  </head>
-  <body>
-    <h1>Modifier l'article "{{ article[1] }}"</h1>
-    <form method="POST">
-      <label for="title">Titre :</label>
-      <input type="text" name="title" value="{{ article[1] }}"><br><br>
-      <label for="content">Contenu :</label><br>
-      <textarea name="content">{{ article[5] }}</textarea><br><br>
-      <input type="submit" value="Modifier">
-    </form>
-  </body>
-</html>
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h1>Modifier l'article "{{ article[1] }}"</h1>
+      <form method="POST">
+        <div class="form-group">
+          <label for="title">Titre :</label>
+          <input type="text" class="form-control" name="title" value="{{ article[1] }}">
+        </div>
+        <div class="form-group">
+          <label for="content">Contenu :</label>
+          <textarea class="form-control" name="content">{{ article[5] }}</textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Modifier</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
