--- a/static/admin.css
+++ b/static/admin.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Tahoma, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     background-color: #f0f0f0;
@@ -17,11 +17,18 @@ body {
 }
 
 
+
 h1, h2, h3, h4, h5, h6 {
     font-family: Georgia, serif;
     margin-top: 0;
     margin-bottom: 1rem;
     font-weight: bold;
+}
+
+textarea {
+    overflow: hidden;
+    min-height: 100px;
+    width: 40%;
 }
 
 
